# YupTexture

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  YupTexture2.0-BCn.cpp  YupTexture2.0-BCn.sln  YupTexture2.0-BCn.vcxproj  YupTexture2.0-BCn.vcxproj.filters  bcn_compressor.cpp  bcn_compressor.h  example.cpp  oklab_math.h  vcpkg.json  vq_bcn_compressor.cpp  vq_bcn_compressor.h  vq_bcn_types.h  vq_encoder.cpp  vq_encoder.h
example/: example.cpp
include/: bcn_compressor.h  oklab_math.hpp  vq_bcn_compressor.h  vq_bcn_types.h  vq_encoder.h
scripts/: flip_rb.py  hdr_generator.py  to_grayscale.py
src/: bcn_compressor.cpp  vq_bcn_compressor.cpp
